# krepis

./: .gitignore  .gitleaks-baseline.json  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: auto-tag.yml  pip-audit.yml  publish.yml  test.yml  version-bump-check.yml
infrastructure/: krepis_runner_spot_bootstrap.sh
infrastructure/iam/: README.md  krepis-runner-executor-role-policy.json
scripts/: live_llm_smoke.py
src/krepis/: __init__.py  _dedup.py  alerts.py  anthropic_payload.py  aws.py  console.py  cost.py  dates.py  ec2_spot.py  email_sender.py  fleet_event_schema_v1.json  fleet_events.py  heartbeat.py  http_retry.py  judge.py  llm.py  llm_capture.py  llm_config.py  llm_search.py  locks.py  logging.py  model_metadata.py  model_pricing.yaml  secrets.py  ssm_dispatcher.py  ssm_log_capture.py  telegram.py  trading_calendar.py  usage_pacing.py  webpush.py  yfinance_quiet.py
tests/: conftest.py  test_alerts.py  test_anthropic_payload.py  test_aws.py  test_console.py  test_cost.py  test_cost_llm.py  test_dates.py  test_dedup.py  test_ec2_spot.py  test_email_sender.py  test_fleet_events.py  test_flow_doctor_default_on.py  test_heartbeat.py  test_http_retry.py  test_judge.py  test_llm.py  test_llm_capture.py  test_llm_config.py  test_llm_search.py  test_locks.py  test_logging.py  test_metrics.py  test_secrets.py  test_session_date.py  test_ssm_dispatcher.py  test_ssm_log_capture.py  test_telegram.py  test_trading_calendar.py  test_usage_pacing.py  test_version_pin.py  test_webpush.py  test_yfinance_quiet.py
